<resources>
    <string name="app_name">EA2 - Cela Pablo</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_registrarse">REGISTRARSE</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_dni">DNI</string>
    <string name="txt_comision">Comisión</string>
    <string name="txt_battery">Battery</string>
    <string name="txt_scores">Puntajes</string>
    <string name="txt_new_game">Nuevo Juego</string>
    <string name="txt_giroscopo">GIROSCOPO</string>
    <string name="txt_acelerometro">ACELEROMETRO</string>
    <string name="txt_proximidad">PROXIMIDAD</string>
    <string name="txt_presion">PRESION</string>
    <string name="txt_eventos">EVENTOS</string>
    <string name="txt_luz">SENSOR DE LUZ</string>
    <string name="txt_title">Title</string>
    <string name="txt_valor1"> </string>
    <string name="txt_valor2"> </string>
    <string name="txt_valor3"> </string>
    <string name="txt_atras">ATRAS</string>
    <string name="txt_eventos_del_sensor">EVENTOS DEL SENSOR</string>
    <string name="txt_mediciones">MEDICIONES</string>
    <string name="txt_logout">Logout</string>
</resources>